--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
+/* styles.css or styles.scss */
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;600&family=Lexend:wght@100..900&display=swap');
+@import 'daisyui/dist/full.css';
+/* @import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities'; */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.fira-sans {
+    font-family: "Fira Sans", sans-serif;
+}
+  
+.font-lexend {
+    font-family: "Lexend", sans-serif;
+}
