unintentional change and retrive my previous state of my project

--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -1,4 +1,4 @@
 .bg-img{
-    background-image: url('../../assets/banner.jpeg');
+    background-image: url('https://i.ibb.co/wBW7tY3/banner.jpg');
 }
 
